Adding challenge code

--- a/index_module.html
+++ b/index_module.html
@@ -38,31 +38,14 @@
             <div class="col-md-3">
                 <form class="bg-dark">
                     <p>Filter Search</p>
-                    <ul class="list-group bg-dark" id="filters">
-                        <li class="list-group-item bg-dark filter">
+                    <ul class="list-group bg-dark">
+                        <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
-                        <li class="list-group-item bg-dark filter">
-                            <label for="city">Enter a City</label>
-                            <br>
-                            <input type="text" placeholder="roswell" id="city" />
+                        <li class="list-group-item bg-dark">
+                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
                         </li>
-                        <li class="list-group-item bg-dark filter">
-                            <label for="state">Enter a State</label>
-                            <br>
-                            <input type="text" placeholder="ca" id="state" />
-                        </li>
-                        <li class="list-group-item bg-dark filter">
-                            <label for="country">Enter a Country</label>
-                            <br>
-                            <input type="text" placeholder="us" id="country" />
-                        </li>
-                        <li class="list-group-item bg-dark filter">
-                            <label for="shape">Enter a Shape</label>
-                            <br>
-                            <input type="text" placeholder="circle" id="shape" />
-                        </li>       
                     </ul>
                   </form>
             </div>
